--- a/dauber.html
+++ b/dauber.html
@@ -193,6 +193,10 @@
           <h1 class="cover-heading">
             <font>DAUBER DATE</font>
           </h1>
+          <p>
+            オープンソースの３DSTLfile等を利用した事がない方は、
+            戸惑う部分があるかと思いますので、３Dプリント方法を改めて記述していきます。
+          </p>
           <p class="lead" data-toggle="tooltip" data-placement="bottom" title="File DownLoad"><a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-primary btn-lg btn-block"><font >Dauber STL FILE</font></a></p>
         </div>
       </div>
