--- a/dauber.html
+++ b/dauber.html
@@ -178,6 +178,7 @@
         </div>
       </div>
     </div>
+    <!--productNav start-->
     <div id="main">
       <div class="container">
         <div id="productNav" class="col-md-12">
@@ -185,22 +186,32 @@
         </div>
       </div>
     </div>
+    <!--productNav end-->
+
     <div id="main02">
       <div class="container">
         <div class="col-md-12">
           <div class="inner cover">
             <h1 class="cover-heading">
-            <font>DAUBER DATE</font>
-          </h1>
-            <p>
-            オープンソースの３DSTLfile等を利用した事がない方は、
-            戸惑う部分があるかと思いますので、３Dプリント方法を改めて記述していきます。
-          </p>
+                            <font>DAUBER file</font>
+            </h1>
+            <p>オープンソースの３DSTLfile等を利用した事がない方は、</p>
+            <p>戸惑う部分があるかと思いますので、３Dプリント方法を改めて記述していきます。</p>
             <p class="lead" data-toggle="tooltip" data-placement="bottom" title="File DownLoad"><a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-primary btn-lg btn-block"><font >Dauber STL FILE</font></a></p>
           </div>
         </div>
       </div>
     </div>
+
+    <!--productNav start-->
+    <div id="main">
+      <div class="container">
+        <div id="productNav" class="col-md-12">
+          <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+        </div>
+      </div>
+    </div>
+    <!--productNav end-->
   </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
