--- a/dauber.html
+++ b/dauber.html
@@ -176,8 +176,9 @@
 
           <!--carousel-custom-->
         </div>
-
-        <p class="lead" data-toggle="tooltip" data-placement="bottom" title="File DownLoad"><a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-primary btn-lg btn-block"><font >Dauber STL FILE</font></a></p>
+        <div class="col-md-12">
+          <p class="lead" data-toggle="tooltip" data-placement="bottom" title="File DownLoad"><a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-primary btn-lg btn-block"><font >Dauber STL FILE</font></a></p>
+        </div>
       </div>
     </div>
     <!--productNav start-->
