--- a/product.html
+++ b/product.html
@@ -92,6 +92,7 @@
 
   <div id="main2">
     <div class="container">
+      <div class="col-md-2"></div>
       <!-- Example row of columns -->
       <a href="dauber.html">
         <div class="col-md-2">
@@ -104,6 +105,7 @@
 
         </div>
       </a>
+      <div class="col-md-2"></div>
       <!--<a href="product.html">
         <div class="col-md-2">
           <img src="https://placehold.jp/600x600.png" class="img-responsive center-block">
