--- a/project.html
+++ b/project.html
@@ -89,30 +89,31 @@
     </div>
   </div>
   <!--end-->
-
-  <!--main-->
-  <div id="main">
-    <div class="container">
-      <div id="productNav_header" class="col-md-12">
+  <!--content start-->
+  <div id="content">
+    <!--main-->
+    <div id="main">
+      <div class="container">
+        <div id="productNav_header" class="col-md-12">
+        </div>
       </div>
     </div>
-  </div>
-  <!--main-->
-  <div id="main2">
-    <div class="container">
-      <!-- Example row of columns -->
-      <a href="dauber.html">
-        <div class="col-md-2">
-          <img src="https://i.pinimg.com/originals/90/06/c6/9006c674363dd5df9f8b887ff98b3bf2.jpg" class="img-responsive center-block">
+    <!--main-->
+    <div id="main2">
+      <div class="container">
+        <!-- Example row of columns -->
+        <a href="dauber.html">
+          <div class="col-md-2">
+            <img src="https://i.pinimg.com/originals/90/06/c6/9006c674363dd5df9f8b887ff98b3bf2.jpg" class="img-responsive center-block">
 
-          <h2 style="font-size: 12px; text-align: center;">Dauber Project</h2>
-          <!--<p>Dauberという単語:下手な絵を書く人、塗る人、塗り道具
+            <h2 style="font-size: 12px; text-align: center;">Dauber Project</h2>
+            <!--<p>Dauberという単語:下手な絵を書く人、塗る人、塗り道具
               Projectの発端はKingsizeというZineから始まる。
             </p>-->
 
-        </div>
-      </a>
-      <!--<a href="product.html">
+          </div>
+        </a>
+        <!--<a href="product.html">
           <div class="col-md-2">
             <img src="https://placehold.jp/600x600.png" class="img-responsive center-block">
             <h2 style="font-size: 12px;">Heading</h2>
@@ -147,8 +148,8 @@
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           </div>
         </a>-->
+      </div>
     </div>
-  </div>
   </div>
   <!--main-->
   <div id="main">
@@ -159,6 +160,8 @@
     </div>
   </div>
   <!--main-->
+  </div>
+  <!--content end-->
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
