--- a/dauber.html
+++ b/dauber.html
@@ -176,7 +176,7 @@
         </div>
       </div>
       <div class="col-md-12">
-        <p class="lead" data-toggle="tooltip" data-placement="bottom" title="File DownLoad"><a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-primary btn-lg btn-block"><font >Dauber STL FILE</font></a></p>
+        <p class="lead" data-toggle="tooltip" data-placement="top" title="File DownLoad"><a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-primary btn-lg btn-block"><font >Dauber STL FILE</font></a></p>
       </div>
     </div>
     <!--productNav start-->
