--- a/product.html
+++ b/product.html
@@ -90,33 +90,23 @@
   </div>
   <!--end-->
 
-  <div id="main2">
-    <div class="container">
-      <!-- Example row of columns -->
-      <a href="dauber.html">
-        <div class="col-md-2">
-          <img src="https://i.pinimg.com/originals/90/06/c6/9006c674363dd5df9f8b887ff98b3bf2.jpg" class="img-responsive center-block">
+  <!--main start-->
 
-          <h2 style="font-size: 12px; text-align: center;">Dauber Project</h2>
-          <!--<p>Dauberという単語:下手な絵を書く人、塗る人、塗り道具
-            Projectの発端はKingsizeというZineから始まる。
-          </p>-->
-
-        </div>
-      </a>
+  <div class="container">
+    <div id="productNav_header" class="col-md-6">
+      <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
     </div>
   </div>
+  <div class="col-md-6">
+
   </div>
-  <!--main-->
-  <div id="main">
-    <div class="container">
-      <div id="productNav" class="col-md-12">
-        <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
-      </div>
+  <div class="container">
+    <div id="productNav_footer" class="col-md-6">
+      <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
     </div>
   </div>
+  <!--main end-->
 
-  <!--main-->
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
