--- a/project.html
+++ b/project.html
@@ -108,58 +108,22 @@
 
             <h2 style="font-size: 12px; text-align: center;">Dauber Project</h2>
             <!--<p>Dauberという単語:下手な絵を書く人、塗る人、塗り道具
-              Projectの発端はKingsizeというZineから始まる。
-            </p>-->
-
+                Projectの発端はKingsizeというZineから始まる。
+              </p>-->
           </div>
         </a>
-        <!--<a href="product.html">
-          <div class="col-md-2">
-            <img src="https://placehold.jp/600x600.png" class="img-responsive center-block">
-            <h2 style="font-size: 12px;">Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          </div>
-        </a>
-        <a href="product.html">
-          <div class="col-md-2">
-            <img src="https://placehold.jp/600x600.png" class="img-responsive center-block">
-            <h2 style="font-size: 12px;">Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          </div>
-        </a>
-        <a href="product.html">
-          <div class="col-md-2">
-            <img src="https://placehold.jp/600x600.png" class="img-responsive center-block">
-            <h2 style="font-size: 12px;">Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          </div>
-        </a>
-        <a href="product.html">
-          <div class="col-md-2">
-            <img src="https://placehold.jp/600x600.png" class="img-responsive center-block">
-            <h2 style="font-size: 12px;">Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          </div>
-        </a>
-        <a href="product.html">
-          <div class="col-md-2">
-            <img src="https://placehold.jp/600x600.png" class="img-responsive center-block">
-            <h2 style="font-size: 12px;">Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          </div>
-        </a>-->
       </div>
     </div>
-  </div>
-  <!--main-->
-  <div id="main">
-    <div class="container">
-      <div id="productNav_footer" class="col-md-12">
-        <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+    <!--content end-->
+    <!--main-->
+    <div id="main">
+      <div class="container">
+        <div id="productNav_footer" class="col-md-12">
+          <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+        </div>
       </div>
     </div>
-  </div>
-  <!--main-->
+    <!--main-->
   </div>
   <!--content end-->
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
