--- a/product.html
+++ b/product.html
@@ -91,18 +91,19 @@
   <!--end-->
 
   <!--main start-->
-
-  <div class="container">
-    <div id="productNav_header" class="col-md-6">
-      <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+  <div id="content">
+    <div class="container">
+      <div id="productNav_header" class="col-md-6">
+        <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+      </div>
     </div>
-  </div>
-  <div class="col-md-6">
+    <div class="col-md-6">
 
-  </div>
-  <div class="container">
-    <div id="productNav_footer" class="col-md-6">
-      <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+    </div>
+    <div class="container">
+      <div id="productNav_footer" class="col-md-6">
+        <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+      </div>
     </div>
   </div>
   <!--main end-->
