--- a/product.html
+++ b/product.html
@@ -91,7 +91,7 @@
   <!--end-->
 
   <!--main start-->
-  <div id="content">
+  <div id="main">
     <div class="container">
       <div id="productNav_header" class="col-md-6">
         <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
