--- a/product.html
+++ b/product.html
@@ -98,7 +98,9 @@
       </div>
     </div>
     <div class="col-md-6">
-
+      <p>Dauberという単語:下手な絵を書く人、塗る人、塗り道具
+                Projectの発端はKingsizeというZineから始まる。
+              </p>
     </div>
     <div class="container">
       <div id="productNav_footer" class="col-md-6">
