--- a/product.html
+++ b/product.html
@@ -97,10 +97,53 @@
         <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
       </div>
     </div>
-    <div class="col-md-6">
-      <p>Dauberという単語:下手な絵を書く人、塗る人、塗り道具
-                Projectの発端はKingsizeというZineから始まる。
-              </p>
+    <div grid-row="" grid-pad="1" grid-gutter="2">
+      <div grid-col="2" grid-pad="1"><small>Size</small></div>
+      <div grid-col="2" grid-pad="1"><small>Scale</small></div>
+      <div grid-col="2" grid-pad="1"><small>Price</small></div>
+      <div grid-col="6" grid-pad="1" class=""><small>.jpeg</small></div>
+    </div>
+
+    <div grid-row="" grid-pad="1" grid-gutter="2">
+      <div grid-col="2" grid-pad="1"><small>8.5”x11”</small></div>
+      <div grid-col="2" grid-pad="1"><small>1:1</small></div>
+      <div grid-col="2" grid-pad="1" class=""><small>$0.99</small></div>
+      <div grid-col="6" grid-pad="1">
+        <shop data-v1="" class="shop_product" product="prod_EMBnPLuW76C7o4" data-options="{&quot;price&quot;:false,&quot;button_text&quot;:&quot;Download&quot;}" contenteditable="false">
+
+          <div class="dropdown_wrapper">
+            <select name="skus" class="dropdown">
+
+
+              <option selected="" value="Blank4">Blank</option>
+
+              <option value="Column-Dots4">Column-Dots</option>
+
+              <option value="Column-Lines4">Column-Lines</option>
+
+              <option value="Dense-Dots4">Dense-Dots</option>
+
+              <option value="Dense-Lines4">Dense-Lines</option>
+
+              <option value="Fog4">Fog</option>
+
+              <option value="Horizontal-Lines4">Horizontal-Lines</option>
+
+              <option value="Sparse-Dots4">Sparse-Dots</option>
+
+              <option value="Sparse-Lines4">Sparse-Lines</option>
+
+              <option value="Squiggles4">Squiggles</option>
+
+
+            </select>
+          </div>
+
+
+          <a class="button" data-add-cart="">Download</a>
+
+        </shop>
+      </div>
     </div>
     <div class="container">
       <div id="productNav_footer" class="col-md-6">
