--- a/product.html
+++ b/product.html
@@ -92,7 +92,7 @@
 
   <!--main start-->
 
-  <div id="main02">
+  <div id="grid_row">
     <div class="container">
       <div id="productNav_header" class="col-md-6">
         <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
