--- a/product.html
+++ b/product.html
@@ -89,7 +89,19 @@
     </div>
   </div>
   <!--end-->
-
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        One of three columns
+      </div>
+      <div class="col-sm">
+        One of three columns
+      </div>
+      <div class="col-sm">
+        One of three columns
+      </div>
+    </div>
+  </div>
   <!--main start-->
 
 
