--- a/product.html
+++ b/product.html
@@ -106,7 +106,7 @@
 
 
   <div class="container">
-    <div id="grid_row">
+    <div id="grid_row justify-content-md-center">
       <div id="productNav_header" class="col-md-6">
         <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
       </div>
