--- a/product.html
+++ b/product.html
@@ -115,7 +115,7 @@
       <div class="col-md-2"><small>Date</small></div>
     </div>
   </div>
-  <div id="grid_row">
+  <div id="main">
     <div class="col-md-12">
       <div class="col-md-2"><small>"R40”</small></div>
       <div class="col-md-2"><small>1:1</small></div>
