--- a/product.html
+++ b/product.html
@@ -109,7 +109,7 @@
     <div id="productNav_header" class="col-md-6">
       <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
     </div>
-    <div id="main">
+    <div id="main" class="grid_row">
       <div class="col-md-12">
         <div class="col-md-2"><small>Size</small></div>
         <div class="col-md-2"><small>Scale</small></div>
