--- a/product.html
+++ b/product.html
@@ -109,18 +109,18 @@
     <div id="productNav_header" class="col-md-6">
       <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
     </div>
-    <div id="main" class="grid_row">
-      <div class="col-md-12">
-        <div class="col-md-2 col"><small>Size</small></div>
-        <div class="col-md-2 col"><small>Scale</small></div>
-        <div class="col-md-2 col"><small>Date</small></div>
+    <div class="grid_row">
+      <div class="col-12">
+        <div class="col-2"><small>Size</small></div>
+        <div class="col-2 "><small>Scale</small></div>
+        <div class="col-2"><small>Date</small></div>
       </div>
 
-      <div class="col-md-12">
-        <div class="col-md-2 col"><small>"R40”</small></div>
-        <div class="col-md-2 col"><small>1:1</small></div>
-        <div class="col-md-2 col"><small>STL</small></div>
-        <div class="col-md-6 col">
+      <div class="col-12">
+        <div class="col-2 "><small>"R40”</small></div>
+        <div class="col-2 "><small>1:1</small></div>
+        <div class="col-2 "><small>STL</small></div>
+        <div class="col-6 ">
           <a class="button" data-add-cart="">Download</a>
         </div>
       </div>
