--- a/product.html
+++ b/product.html
@@ -110,13 +110,13 @@
       <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
     </div>
     <div class="grid_row">
-      <div class="col-12">
+      <div class="row">
         <div class="col-2"><small>Size</small></div>
         <div class="col-2 "><small>Scale</small></div>
         <div class="col-2"><small>Date</small></div>
       </div>
 
-      <div class="col-12">
+      <div class="row">
         <div class="col-2 "><small>"R40”</small></div>
         <div class="col-2 "><small>1:1</small></div>
         <div class="col-2 "><small>STL</small></div>
