--- a/dauber.html
+++ b/dauber.html
@@ -190,22 +190,11 @@
           <div class="col-2 "><small>1:1</small></div>
           <div class="col-2 "><small>STL</small></div>
           <div class="col-6 ">
-            <a class="button" data-add-cart="">Download</a>
+            <a class="button" href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z">Download</a>
           </div>
         </div>
       </div>
     </div>
-
-    <!--productNav start-->
-    <div id="main">
-      <div class="container">
-        <div id="productNav" class="col-md-12">
-          <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
-        </div>
-      </div>
-    </div>
-    <!--productNav end-->
-
   </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
