--- a/dauber.html
+++ b/dauber.html
@@ -175,8 +175,24 @@
           <!--carousel-custom-->
         </div>
       </div>
+
       <div class="col-md-12">
-        <p class="lead" data-toggle="tooltip" data-placement="top" title="File DownLoad"><a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-primary btn-lg btn-block"><font >Dauber STL FILE</font></a></p>
+        <div class="grid_row">
+          <div class="row">
+            <div class="col-2"><small>Size</small></div>
+            <div class="col-2 "><small>Scale</small></div>
+            <div class="col-2"><small>Date</small></div>
+          </div>
+
+          <div class="row">
+            <div class="col-2 "><small>"R40”</small></div>
+            <div class="col-2 "><small>1:1</small></div>
+            <div class="col-2 "><small>STL</small></div>
+            <div class="col-6 ">
+              <a class="button" href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z">Download</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
