--- a/dauber.html
+++ b/dauber.html
@@ -103,6 +103,24 @@
     <!--main-->
 
     <div class="container">
+      <div class="col-md-12">
+        <div class="grid_row">
+          <div class="row">
+            <div class="col-2"><small>Size</small></div>
+            <div class="col-2 "><small>Scale</small></div>
+            <div class="col-2"><small>Date</small></div>
+          </div>
+
+          <div class="row">
+            <div class="col-2 "><small>"R40”</small></div>
+            <div class="col-2 "><small>1:1</small></div>
+            <div class="col-2 "><small>STL</small></div>
+            <div class="col-6 ">
+              <a class="button" href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z">Download</a>
+            </div>
+          </div>
+        </div>
+      </div>
       <!--text-->
       <div class="col-md-12">
         <div class="col-md-6">
@@ -176,25 +194,18 @@
         </div>
       </div>
 
-      <div class="col-md-12">
-        <div class="grid_row">
-          <div class="row">
-            <div class="col-2"><small>Size</small></div>
-            <div class="col-2 "><small>Scale</small></div>
-            <div class="col-2"><small>Date</small></div>
-          </div>
+    </div>
 
-          <div class="row">
-            <div class="col-2 "><small>"R40”</small></div>
-            <div class="col-2 "><small>1:1</small></div>
-            <div class="col-2 "><small>STL</small></div>
-            <div class="col-6 ">
-              <a class="button" href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z">Download</a>
-            </div>
-          </div>
+    <!--productNav start-->
+    <div id="main">
+      <div class="container">
+        <div id="productNav" class="col-md-12">
+          <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
         </div>
       </div>
     </div>
+    <!--productNav end-->
+
   </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
