--- a/dauber.html
+++ b/dauber.html
@@ -106,6 +106,21 @@
       <div class="col-md-12">
         <div class="grid_row">
           <div class="row">
+            <div class="col-2"><small>Project name</small></div>
+            <div class="col-2 "><small>Program</small></div>
+            <div class="col-2"><small>Location</small></div>
+          </div>
+
+          <div class="row">
+            <div class="col-2 "><small>Dauber Side</small></div>
+            <div class="col-2 "><small>2020/0701/~</small></div>
+            <div class="col-2 "><small>TOKYO</small></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-12">
+        <div class="grid_row">
+          <div class="row">
             <div class="col-2"><small>Size</small></div>
             <div class="col-2 "><small>Scale</small></div>
             <div class="col-2"><small>Date</small></div>
