--- a/dauber.html
+++ b/dauber.html
@@ -112,9 +112,9 @@
           </div>
 
           <div class="row">
-            <div class="col-2 "><small>Dauber Side</small></div>
-            <div class="col-2 "><small>2020/0701/~</small></div>
-            <div class="col-2 "><small>TOKYO</small></div>
+            <div class="col-2 toybox"><small>Dauber Side</small></div>
+            <div class="col-2 toybox"><small>2020/0701/~</small></div>
+            <div class="col-2 toybox"><small>TOKYO</small></div>
           </div>
         </div>
       </div>
@@ -127,10 +127,10 @@
           </div>
 
           <div class="row">
-            <div class="col-2 "><small>"R40”</small></div>
-            <div class="col-2 "><small>1:1</small></div>
-            <div class="col-2 "><small>STL</small></div>
-            <div class="col-3 ">
+            <div class="col-2 toybox"><small>"R40”</small></div>
+            <div class="col-2 toybox"><small>1:1</small></div>
+            <div class="col-2 toybox"><small>STL</small></div>
+            <div class="col-3 toybox">
               <a class="button" href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z">Download</a>
             </div>
           </div>
