--- a/project.html
+++ b/project.html
@@ -114,7 +114,21 @@
         </a>
       </div>
     </div>
-    <!--content end-->
+    <div id="main2">
+      <div class="container">
+        <!-- Example row of columns -->
+        <a href="dauber.html">
+          <div class="col-md-2">
+            <img src="https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg" class="img-responsive center-block">
+
+            <h2 style="font-size: 12px; text-align: center;">marebito Project</h2>
+            <!--<p>Dauberという単語:下手な絵を書く人、塗る人、塗り道具
+                        Projectの発端はKingsizeというZineから始まる。
+                      </p>-->
+          </div>
+        </a>
+      </div>
+    </div>
     <!--main-->
     <div id="main">
       <div class="container">
