--- a/project.html
+++ b/project.html
@@ -115,7 +115,7 @@
         <!-- Example row of columns -->
         <a href="dauber.html">
           <div class="col-md-2">
-            <img　style="width: 155px; height: 155px; object-fit: cover;" src="https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg" class="img-responsive center-block">
+            <img src="https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg" class="img-responsive center-block">
 
             <h2 style="font-size: 12px; text-align: center;　">marebito Project</h2>
           </div>
