--- a/project.html
+++ b/project.html
@@ -113,7 +113,7 @@
           </div>
         </a>
         <!-- Example row of columns -->
-        <a href="dauber.html">
+        <a href="#">
           <div class="col-md-2">
             <img src="https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg" class="img-responsive center-block">
 
