--- a/product.html
+++ b/product.html
@@ -109,22 +109,42 @@
     <div id="productNav_header" class="col-md-6">
       <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
     </div>
-    <div class="grid_row">
-      <div class="row">
-        <div class="col-2"><small>Size</small></div>
-        <div class="col-2 "><small>Scale</small></div>
-        <div class="col-2"><small>Date</small></div>
-      </div>
+    <div class="col-md-12">
+      <div class="grid_row">
+        <div class="row">
+          <div class="col-2"><small>Size</small></div>
+          <div class="col-2 "><small>Scale</small></div>
+          <div class="col-2"><small>Date</small></div>
+        </div>
 
-      <div class="row">
-        <div class="col-2 "><small>"R40”</small></div>
-        <div class="col-2 "><small>1:1</small></div>
-        <div class="col-2 "><small>STL</small></div>
-        <div class="col-6 ">
-          <a class="button" data-add-cart="">Download</a>
+        <div class="row">
+          <div class="col-2 "><small>"R40”</small></div>
+          <div class="col-2 "><small>1:1</small></div>
+          <div class="col-2 "><small>STL</small></div>
+          <div class="col-6 ">
+            <a class="button" href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z">Download</a>
+          </div>
         </div>
       </div>
     </div>
+
+    <section class="section mt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div>
+              <img alt="Web Studio" class="img-fluid" src="https://raw.githubusercontent.com/solodev/vertically-centering/master/images/vc-img-1.jpg" />
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-5 ml-auto d-flex align-items-center mt-4 mt-md-0">
+            <div>
+              <h2>Module Studio</h2>
+              <p class="margin-top-s">Whether you’re a full stack web developer, content author, or business professional – Solodev gives you the power to build, customize, and manage modules to boost your website.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <div class="container">
       <div id="productNav_footer" class="col-md-6">
