--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/v4-shims.css">
 
 </head>
-<body>
+<body id="body">
   <header id="header">
     <div class="container">
       <div id="logo">
