--- a/dauber.html
+++ b/dauber.html
@@ -95,7 +95,7 @@
     <!--main-->
     <div id="main">
       <div class="container">
-        <div id="productNav" class="col-md-12">
+        <div id="productNav_header" class="col-md-12">
           <a href="project.html"><span class="back-arrow">←</span> Back to Project </a>
         </div>
       </div>
@@ -214,7 +214,7 @@
     <!--productNav start-->
     <div id="main">
       <div class="container">
-        <div id="productNav" class="col-md-12">
+        <div id="productNav_footer" class="col-md-12">
           <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
         </div>
       </div>
