--- a/product.html
+++ b/product.html
@@ -106,32 +106,33 @@
 
 
   <div class="container">
-    <div id="productNav_header" class="col-md-6">
-      <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
-    </div>
+    <!--text-->
     <div class="col-md-12">
       <div class="grid_row">
         <div class="row">
-          <div class="col-2"><small>Size</small></div>
-          <div class="col-2 "><small>Scale</small></div>
-          <div class="col-2"><small>Date</small></div>
+          <div class="col-3"><small>Learn</small></div>
         </div>
-
         <div class="row">
-          <div class="col-2 "><small>"R40”</small></div>
-          <div class="col-2 "><small>1:1</small></div>
-          <div class="col-2 "><small>STL</small></div>
-          <div class="col-6 ">
-            <a class="button" href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z">Download</a>
-          </div>
+          <div class="col-3 toybox"><small>Blender</small></div>
         </div>
       </div>
     </div>
-    <div class="container">
-      <div id="productNav_footer" class="col-md-6">
-        <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+    <!--text-->
+    <div class="col-md-12">
+      <div class="inner cover">
+        <p>
+        <font >
+          Blenderは、無料のオープンソース3D作成ソフトです。モデリング、ボーンアニメーション、シミュレーション、レンダリング、合成、モーショントラッキング、ビデオ編集、2Dアニメーションなどの3Dパイプライン全体をサポートします。
+        </font>
+      </p>
+        <p>
+        <font >
+          <a class="button" href="https://www.blender.org/download/">自力で作成したい人はこちらからダウンロードできます。</a>
+        </font>
+      </p>
       </div>
     </div>
+    <!--text-->
   </div>
   <!--main end-->
 
