--- a/dauber.html
+++ b/dauber.html
@@ -141,7 +141,7 @@
       </div>
       <!--text-->
       <div class="col-md-12">
-        <div class="col-md-6">
+        <!--<div class="col-md-6">
           <div class="inner cover">
             <h1 class="cover-heading">
                 <font>DAUBER Project</font>
@@ -160,6 +160,38 @@
 
             ではkingsizeが出版されてから16年が経過した今、路上で活動を続けるライターたちにとってのDIYマーカーやツール、それだけでなくgraffitiはどう変化したのだろうか、このプロジェクトではkingsizeを参照しながら、現代とりわけ2010年代以降のデジタルテクノロジーの発展とともに発生したメーカーズムーブメント的手法をもとに3Dソフトによるモデリングから、ソーシャルネットワーキングによる情報共有、拡散を行い、現代におけるDIYマーカーのあり方を探る。
             </font></p>
+          </div>
+        </div>-->
+        <!--text-->
+        <div class="col-md-6">
+          <div class="grid_row">
+            <div class="row">
+              <div class="col-3"><small>Project name</small></div>
+              <div class="col-3 "><small>Program</small></div>
+              <div class="col-2"><small>Location</small></div>
+            </div>
+
+            <div class="row">
+              <div class="col-3 toybox"><small>Dauber Side</small></div>
+              <div class="col-3 toybox"><small>2020/07/01/~</small></div>
+              <div class="col-2 toybox"><small>TOKYO</small></div>
+            </div>
+          </div>
+          <div class="grid_row">
+            <div class="row">
+              <div class="col-3"><small>Size</small></div>
+              <div class="col-3 "><small>Scale</small></div>
+              <div class="col-2"><small>Date</small></div>
+            </div>
+
+            <div class="row">
+              <div class="col-3 toybox"><small>"R40”</small></div>
+              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small>STL</small></div>
+              <div class="col-3 toybox">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z">Download</a>
+              </div>
+            </div>
           </div>
         </div>
         <!--text-->
