--- a/dauber.html
+++ b/dauber.html
@@ -109,7 +109,7 @@
 
       <!--text-->
       <div class="col-md-12">
-        <!--<div class="col-md-6">
+        <div class="col-md-6">
           <div class="inner cover">
             <h1 class="cover-heading">
                 <font>DAUBER Project</font>
@@ -129,7 +129,7 @@
             ではkingsizeが出版されてから16年が経過した今、路上で活動を続けるライターたちにとってのDIYマーカーやツール、それだけでなくgraffitiはどう変化したのだろうか、このプロジェクトではkingsizeを参照しながら、現代とりわけ2010年代以降のデジタルテクノロジーの発展とともに発生したメーカーズムーブメント的手法をもとに3Dソフトによるモデリングから、ソーシャルネットワーキングによる情報共有、拡散を行い、現代におけるDIYマーカーのあり方を探る。
             </font></p>
           </div>
-        </div>-->
+        </div>
         <!--text-->
         <div class="col-md-6">
           <div class="grid_row">
