--- a/dauber.html
+++ b/dauber.html
@@ -141,7 +141,7 @@
 
             <div class="row">
               <div class="col-3 toybox"><small>Dauber Side</small></div>
-              <div class="col-3 toybox"><small>2020/07/01/~</small></div>
+              <div class="col-3 toybox"><small>20200701</small></div>
               <div class="col-2 toybox"><small>TOKYO</small></div>
             </div>
           </div>
