--- a/project.html
+++ b/project.html
@@ -90,49 +90,21 @@
   </div>
   <!--end-->
   <!--content start-->
-  <div id="content">
-    <!--main-->
-    <div id="main">
-      <div class="container">
-        <div id="productNav_header" class="col-md-12">
+  <!--text-->
+  <div class="col-md-12">
+    <a href="dauber.html">
+      <div class="col-md-6">
+        <div class="grid_row">
+          <div class="row">
+            <div class="col-3"><small>01/</small></div>
+            <div class="col-3 "><small>2020/</small></div>
+            <div class="col-2"><small>DAUBER SIDE PROJECT</small></div>
+          </div>
         </div>
       </div>
-    </div>
-    <!--main-->
-    <div id="main2">
-      <div class="container">
-        <!-- Example row of columns -->
-        <a href="dauber.html">
-          <div class="col-md-2">
-            <img src="https://i.pinimg.com/originals/90/06/c6/9006c674363dd5df9f8b887ff98b3bf2.jpg" class="img-responsive center-block">
-
-            <h2 style="font-size: 12px; text-align: center;">Dauber Project</h2>
-            <!--<p>Dauberという単語:下手な絵を書く人、塗る人、塗り道具
-                Projectの発端はKingsizeというZineから始まる。
-              </p>-->
-          </div>
-        </a>
-        <!-- Example row of columns -->
-        <!--<a href="#">
-          <div class="col-md-2">
-            <img src="https://i.pinimg.com/originals/66/36/d0/6636d07eba36b23c9ac5c16ee9b948ee.jpg" class="img-responsive center-block">
-
-            <h2 style="font-size: 12px; text-align: center;　">marebito Project</h2>
-          </div>
-        </a>-->
-      </div>
-    </div>
-
-    <!--main-->
-    <div id="main">
-      <div class="container">
-        <div id="productNav_footer" class="col-md-12">
-          <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
-        </div>
-      </div>
-    </div>
-    <!--main-->
+    </a>
   </div>
+  <!--text-->
   <!--content end-->
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
