--- a/project.html
+++ b/project.html
@@ -91,9 +91,9 @@
   <!--end-->
   <!--content start-->
   <!--text-->
-  <div class="col-md-12">
+  <div class="container">
     <a href="dauber.html">
-      <div class="col-md-6">
+      <div class="col-md-12">
         <div class="grid_row">
           <div class="row">
             <div class="col-3"><small>01/</small></div>
