--- a/project.html
+++ b/project.html
@@ -91,13 +91,13 @@
   <!--end-->
   <!--content start-->
   <!--text-->
-  <div class="container">
+  <div class="productNav_header container">
     <a href="dauber.html">
       <div class="col-md-12">
         <div class="grid_row">
           <div class="row">
-            <div class="col-3"><small>01/</small></div>
-            <div class="col-3 "><small>2020/</small></div>
+            <div class="col-1"><small>01/</small></div>
+            <div class="col-1 "><small>2020/</small></div>
             <div class="col-2"><small>DAUBER SIDE PROJECT</small></div>
           </div>
         </div>
