--- a/project.html
+++ b/project.html
@@ -91,7 +91,7 @@
   <!--end-->
   <!--content start-->
   <!--text-->
-  <div class="productNav_header container">
+  <div class="container">
     <a href="dauber.html">
       <div class="col-md-12">
         <div class="grid_row">
