--- a/project.html
+++ b/project.html
@@ -95,7 +95,7 @@
     <a href="dauber.html">
       <div class="col-md-12">
         <div class="grid_row">
-          <div class="row">
+          <div class="row_first">
             <div class="col-1"><small>01/</small></div>
             <div class="col-1 "><small>2020/</small></div>
             <div class="col-2"><small>DAUBER SIDE PROJECT</small></div>
