--- a/project.html
+++ b/project.html
@@ -96,8 +96,8 @@
       <div class="col-md-12">
         <div class="grid_row">
           <div class="row_first">
-            <div class="col-1"><small>01/</small></div>
-            <div class="col-1 "><small>2020/</small></div>
+            <div class="col-1"><small>01</small></div>
+            <div class="col-1 "><small>2020</small></div>
             <div class="col-2"><small>DAUBER SIDE PROJECT</small></div>
           </div>
         </div>
