--- a/dauber.html
+++ b/dauber.html
@@ -111,7 +111,7 @@
         <div class="col-md-6">
           <div class="inner cover">
             <h1 class="cover-heading">
-                <font>DAUBER Project</font>
+                <font>DAUBER SIDE Project</font>
               </h1>
             <p><font >2004年SwedenのA5pressからKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
             これは私が知る限り唯一、DIYマーカー自体とその背景について記録された書籍である。
