--- a/dauber.html
+++ b/dauber.html
@@ -111,7 +111,7 @@
         <div class="col-md-6">
           <div class="inner cover">
             <h1 class="cover-heading">
-                <font>DAUBER SIDE Project</font>
+                <font>tentative DAUBER SIDE Project</font>
               </h1>
             <p><font >2004年SwedenのA5pressからKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
             これは私が知る限り唯一、DIYマーカー自体とその背景について記録された書籍である。
@@ -139,7 +139,7 @@
             </div>
 
             <div class="row">
-              <div class="col-3 toybox"><small>Dauber Side</small></div>
+              <div class="col-3 toybox"><small>tentative Dauber Side</small></div>
               <div class="col-3 toybox"><small>20200701</small></div>
               <div class="col-2 toybox"><small>TOKYO</small></div>
             </div>
