--- a/test/program.html
+++ b/test/program.html
@@ -1,8 +1,8 @@
 <html>
+<head>
+	<SCRIPT src="program.js"></SCRIPT>
+</head>
 <body>
-	<pre>
-		<SCRIPT src="program.js"></SCRIPT>
-	</pre>
 </body>
 
 </html>
