--- a/dauber.html
+++ b/dauber.html
@@ -11,11 +11,12 @@
   <link href="css/grid.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/v4-shims.css">
-
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Underdog&display=swap');
+    body {
+      font-family: "Noto Sans JP script=all rev=1";
+    }
   </style>
 
 </head>
