--- a/dauber.html
+++ b/dauber.html
@@ -15,7 +15,7 @@
 
   <style>
     body {
-      font-family: "Noto Serif JP script=all rev=1";
+      font-family: "Helvetica Neue", "Noto Serif JP script=all rev=1";
     }
   </style>
 
