--- a/dauber.html
+++ b/dauber.html
@@ -11,12 +11,9 @@
   <link href="css/grid.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/v4-shims.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 
   <style>
-    body {
-      font-family: "Helvetica Neue", "Noto Serif JP script=all rev=1";
-    }
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
   </style>
 
 </head>
