--- a/project.html
+++ b/project.html
@@ -98,7 +98,7 @@
           <div class="row_first">
             <div class="col-1"><small>01</small></div>
             <div class="col-1 "><small>2020</small></div>
-            <div class="col-6"><small>Tentative Dauber Side</small></div>
+            <div class="col-6"><small>Dauber Side</small></div>
           </div>
         </div>
       </div>
