--- a/dauber.html
+++ b/dauber.html
@@ -124,7 +124,7 @@
           </div>
         </div>
         <!--text-->
-        <div class="col-md-6">
+        <div class="col-6">
           <div class="grid_row">
             <div class="row">
               <div class="col-4"><small>Project name</small></div>
