--- a/dauber.html
+++ b/dauber.html
@@ -150,7 +150,7 @@
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-3 toybox"><small>STL</small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z">Download</a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z"><small>Download</small></a>
               </div>
             </div>
           </div>
