--- a/dauber.html
+++ b/dauber.html
@@ -124,32 +124,32 @@
           </div>
         </div>
         <!--text-->
-        <div class="col-md-6">
+        <div class="col-md-">
           <div class="grid_row">
             <div class="row">
-              <div class="col-3"><small>Project name</small></div>
-              <div class="col-3 "><small>Program</small></div>
-              <div class="col-3"><small>Location</small></div>
+              <div class="col-2"><small>Project name</small></div>
+              <div class="col-2 "><small>Program</small></div>
+              <div class="col-2"><small>Location</small></div>
             </div>
 
             <div class="row">
-              <div class="col-3 toybox"><small>Dauber Side</small></div>
-              <div class="col-3 toybox"><small>20200701</small></div>
-              <div class="col-3 toybox"><small>TOKYO</small></div>
+              <div class="col-2 toybox"><small>Dauber Side</small></div>
+              <div class="col-2 toybox"><small>20200701</small></div>
+              <div class="col-2 toybox"><small>TOKYO</small></div>
             </div>
           </div>
           <div class="grid_row">
             <div class="row">
-              <div class="col-3"><small>Size</small></div>
-              <div class="col-3 "><small>Scale</small></div>
-              <div class="col-3"><small>Date</small></div>
+              <div class="col-2"><small>Size</small></div>
+              <div class="col-2 "><small>Scale</small></div>
+              <div class="col-2"><small>Date</small></div>
             </div>
 
             <div class="row">
-              <div class="col-3 toybox"><small>"R40”</small></div>
-              <div class="col-3 toybox"><small>1:1</small></div>
-              <div class="col-3 toybox"><small>STL</small></div>
-              <div class="col-3 toybox">
+              <div class="col-2 toybox"><small>"R40”</small></div>
+              <div class="col-2 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small>STL</small></div>
+              <div class="col-2 toybox">
                 <a class="button" href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z"><small>Download</small></a>
               </div>
             </div>
