--- a/dauber.html
+++ b/dauber.html
@@ -132,13 +132,13 @@
               <div class="col-2"><small>Location</small></div>
             </div>
 
-            <div class="row_first">
+            <div class="row">
               <div class="col-3 toybox"><small>Dauber Side</small></div>
               <div class="col-3 toybox"><small>20200701</small></div>
               <div class="col-2 toybox"><small>TOKYO</small></div>
             </div>
           </div>
-          <div class="grid_row_first">
+          <div class="grid_row">
             <div class="row">
               <div class="col-3"><small>Size</small></div>
               <div class="col-3 "><small>Scale</small></div>
