--- a/product.html
+++ b/product.html
@@ -33,9 +33,11 @@
             <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
                 　<li><a class="dropdown-item" href="index.html">
-                    <p>home</p></a></li>
+                    <p>home</p>
+                  </a></li>
                 <li><a class="dropdown-item" href="project.html">
-                    <p>project</p></a></li>
+                    <p>project</p>
+                  </a></li>
                 <!--<li><a class="dropdown-item" href="#">Another action</a><li>-->
               </ul>
             </div>
@@ -49,7 +51,7 @@
   </header>
   <!-- /header -->
 
-  <!-- content goes here -->
+  <!-- modal fade goes here -->
   <div class="modal fade" id="squarespaceModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -68,7 +70,8 @@
               <div class="form-group">
                 <textarea name="entry.2108942869" class="form-control" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
                 <span class="help-block">
-                  <p id="characterLeft" class="help-block ">Up to 140 characters</p></span>
+                  <p id="characterLeft" class="help-block ">Up to 140 characters</p>
+                </span>
               </div>
               <div class="modal-footer">
                 <div class="btn-group btn-group-justified" role="group" aria-label="group button">
@@ -91,118 +94,12 @@
       </div>
     </div>
   </div>
-  <!-- content goes here end-->
+  <!-- modal fade goes here end-->
 
+  <!-- main goes here start-->
   <div id="content">
-
-    <!--main-->
-    <div id="main">
-      <div class="container">
-        <div id="productNav" class="col-md-12">
-          <a href="project.html"><span class="back-arrow">←</span> Back to Project </a>
-        </div>
-      </div>
-    </div>
-    <!--main-->
-
-    <div class="container">
-
-      <!--text-->
-      <div class="col-md-12">
-        <div class="col-md-6">
-          <div class="grid_row">
-            <div class="row">
-              <div class="col-3"><small>Project name</small></div>
-              <div class="col-3 "><small>Program</small></div>
-              <div class="col-2"><small>Location</small></div>
-            </div>
-
-            <div class="row">
-              <div class="col-3 toybox"><small>provisional Dauber Side</small></div>
-              <div class="col-3 toybox"><small>2020/07/01/~</small></div>
-              <div class="col-2 toybox"><small>TOKYO</small></div>
-            </div>
-          </div>
-          <div class="grid_row">
-            <div class="row">
-              <div class="col-3"><small>Size</small></div>
-              <div class="col-3 "><small>Scale</small></div>
-              <div class="col-2"><small>Date</small></div>
-            </div>
-
-            <div class="row">
-              <div class="col-3 toybox"><small>"R40”</small></div>
-              <div class="col-3 toybox"><small>1:1</small></div>
-              <div class="col-2 toybox"><small>STL</small></div>
-              <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z">Download</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--text-->
-
-        <div class="col-md-6">
-
-          <!--carousel-custom-->
-
-          <div id="carousel-custom" class="carousel slide" data-ride="carousel">
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-              <div class="item ">
-                <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
-              </div>
-              <div class="item">
-                <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="600" width="600">
-              </div>
-              <div class="item active">
-                <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="600" width="600">
-              </div>
-            </div>
-
-            <!-- Controls -->
-            <!---->
-            <a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
-              <!--<span class="fas fa-arrow-left"></span>-->
-            </a>
-            <a class="right carousel-control" href="#carousel-custom" role="button" data-slide="next">
-              <!--<span class="fas fa-arrow-right"></span>-->
-            </a>
-            <!---->
-
-
-            <!-- Indicators start-->
-            <!--<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
-              <li data-target="#carousel-custom" data-slide-to="0" class="active">
-                <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
-              </li>
-              <li data-target="#carousel-custom" data-slide-to="1">
-                <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="60" width="60">
-              </li>
-              <li data-target="#carousel-custom" data-slide-to="2">
-                <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="60" width="60">
-              </li>
-            </ol>-->
-            <!--Indicators end-->
-          </div>
-
-          <!--carousel-custom-->
-        </div>
-      </div>
-
-    </div>
-
-    <!--productNav start-->
-    <div id="main">
-      <div class="container">
-        <div id="productNav_footer" class="col-md-12">
-          <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
-        </div>
-      </div>
-    </div>
-    <!--productNav end-->
-
   </div>
+  <!-- main goes here goal-->
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
