--- a/product.html
+++ b/product.html
@@ -15,10 +15,6 @@
   <link rel="stylesheet" type="text/css" href="http://mplus-fonts.sourceforge.jp/webfonts/basic_latin/mplus_webfonts.css">
   <link rel="stylesheet" type="text/css" href="http://mplus-fonts.sourceforge.jp/webfonts/general-j/mplus_webfonts.css">
 
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Underdog&display=swap');
-  </style>
-
 </head>
 <body id="bg">
   <!-- /header -->
@@ -106,6 +102,10 @@
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="js/crime.js"></script>
   <script src="js/tiltfx.js"></script>
+  <script src="../addons/p5.js"></script>
+  <script src="../addons/p5.min.js"></script>
+  <script src="../addons/sketch.js"></script>
+
   <script>
     $(document).ready(function () {
       $('[data-toggle="tooltip"]').tooltip();
