--- a/product.html
+++ b/product.html
@@ -102,9 +102,9 @@
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="js/crime.js"></script>
   <script src="js/tiltfx.js"></script>
-  <script src="../addons/p5.js"></script>
-  <script src="../addons/p5.min.js"></script>
-  <script src="../addons/sketch.js"></script>
+  <script src="js/addons/p5.js"></script>
+  <script src="js/addons/p5.min.js"></script>
+  <script src="js/addons/sketch.js"></script>
 
   <script>
     $(document).ready(function () {
