--- a/product.html
+++ b/product.html
@@ -12,6 +12,10 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/v4-shims.css">
 
+  <script src="js/addons/p5.js"></script>
+  <script src="js/addons/p5.min.js"></script>
+  <script src="js/addons/sketch.js"></script>
+
 </head>
 <body id="bg">
   <!-- /header -->
