--- a/project.html
+++ b/project.html
@@ -23,9 +23,11 @@
             <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
                 　<li><a class="dropdown-item" href="index.html">
-                    <p>home</p></a></li>
+                    <p>home</p>
+                  </a></li>
                 <li><a class="dropdown-item" href="project.html">
-                    <p>project</p></a></li>
+                    <p>project</p>
+                  </a></li>
                 <!--<li><a class="dropdown-item" href="#">Another action</a><li>-->
               </ul>
             </div>
@@ -60,7 +62,8 @@
               <div class="form-group">
                 <textarea name="entry.2108942869" class="form-control" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
                 <span class="help-block">
-                  <p id="characterLeft" class="help-block ">Up to 140 characters</p></span>
+                  <p id="characterLeft" class="help-block ">Up to 140 characters</p>
+                </span>
               </div>
               <div class="modal-footer">
                 <div class="btn-group btn-group-justified" role="group" aria-label="group button">
@@ -103,7 +106,19 @@
         </div>
       </div>
     </a>
+    <a href="Sketch.html">
+      <div class="col-md-12">
+        <div class="grid_row">
+          <div class="row_first">
+            <div class="col-1"><small>02</small></div>
+            <div class="col-1 "><small>2020</small></div>
+            <div class="col-6"><small>Sketch</small></div>
+          </div>
+        </div>
+      </div>
+    </a>
   </div>
+
   <!--text-->
   <!--content end-->
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
