--- a/project.html
+++ b/project.html
@@ -106,6 +106,8 @@
         </div>
       </div>
     </a>
+  </div>
+  <div class="container">
     <a href="Sketch.html">
       <div class="col-md-12">
         <div class="grid_row">
@@ -118,6 +120,7 @@
       </div>
     </a>
   </div>
+
 
   <!--text-->
   <!--content end-->
