--- a/project.html
+++ b/project.html
@@ -95,30 +95,29 @@
   <!--content start-->
   <!--text-->
   <div class="container">
-    <a href="dauber.html">
-      <div class="col-md-12">
-        <div class="grid_row">
-          <div class="row_first">
-            <div class="col-1"><small>01</small></div>
-            <div class="col-1 "><small>2020</small></div>
-            <div class="col-6"><small>Dauber Side</small></div>
-          </div>
+
+    <div class="col-md-12">
+      <a href="dauber.html"></a>
+      <div class="grid_row">
+        <div class="row_first">
+          <div class="col-1"><small>01</small></div>
+          <div class="col-1 "><small>2020</small></div>
+          <div class="col-6"><small>Dauber Side</small></div>
         </div>
       </div>
-    </a>
-  </div>
-  <div class="container">
-    <a href="Sketch.html">
-      <div class="col-md-12">
-        <div class="grid_row">
-          <div class="row">
-            <div class="col-1"><small>02</small></div>
-            <div class="col-1 "><small>2020</small></div>
-            <div class="col-6"><small>Sketch</small></div>
-          </div>
+      </a>
+    </div>
+    <div class="col-md-12">
+      <a href="Sketch.html"></a>
+      <div class="grid_row">
+        <div class="row">
+          <div class="col-1"><small>02</small></div>
+          <div class="col-1 "><small>2020</small></div>
+          <div class="col-6"><small>Sketch</small></div>
         </div>
       </div>
-    </a>
+      </a>
+    </div>
   </div>
 
 
