--- a/project.html
+++ b/project.html
@@ -97,23 +97,25 @@
   <div class="container">
 
     <div class="col-md-12">
-      <a href="dauber.html"></a>
       <div class="grid_row">
-        <div class="row_first">
+        <div class="row">
+          <a href="dauber.html"></a>
           <div class="col-1"><small>01</small></div>
           <div class="col-1 "><small>2020</small></div>
           <div class="col-6"><small>Dauber Side</small></div>
+          </a>
         </div>
       </div>
-      </a>
     </div>
     <div class="col-md-12">
-      <a href="Sketch.html"></a>
+
       <div class="grid_row">
         <div class="row">
-          <div class="col-1"><small>02</small></div>
-          <div class="col-1 "><small>2020</small></div>
-          <div class="col-6"><small>Sketch</small></div>
+          <a href="Sketch.html">
+            <div class="col-1"><small>02</small></div>
+            <div class="col-1 "><small>2020</small></div>
+            <div class="col-6"><small>Sketch</small></div>
+          </a>
         </div>
       </div>
       </a>
