--- a/project.html
+++ b/project.html
@@ -98,7 +98,7 @@
 
     <div class="col-md-12">
       <div class="grid_row">
-        <div class="row">
+        <div class="row_first">
           <a href="dauber.html"></a>
           <div class="col-1"><small>01</small></div>
           <div class="col-1 "><small>2020</small></div>
