--- a/project.html
+++ b/project.html
@@ -106,16 +106,16 @@
         </div>
       </div>
     </a>
-    <a href="Sketch.html"></a>
-    <div class="col-md-12">
-      <div class="grid_row">
-        <div class="row">
-          <div class="col-1"><small>02</small></div>
-          <div class="col-1 "><small>2020</small></div>
-          <div class="col-6"><small>Sketch</small></div>
+    <a href="Sketch.html">
+      <div class="col-md-12">
+        <div class="grid_row">
+          <div class="row">
+            <div class="col-1"><small>02</small></div>
+            <div class="col-1 "><small>2020</small></div>
+            <div class="col-6"><small>Sketch</small></div>
+          </div>
         </div>
       </div>
-    </div>
     </a>
   </div>
 
