--- a/Sketch.html
+++ b/Sketch.html
@@ -90,6 +90,52 @@
 
   <!-- main goes here start-->
   <div id="content">
+    <div class="col-lg-12"></div>
+    <!-- Example row of columns -->
+    <div class="row" style="max-width:1000px; width:100%; margin: 0 auto;">
+      <a href="#">
+        <div class="col-md-2">
+          <img src="https://placehold.jp/600x600.png" class="img-responsive center-block">
+          <!-- <h2 style="font-size: 12px;">Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p> -->
+        </div>
+      </a>
+      <a href="#">
+        <div class="col-md-2">
+          <img src="https://placehold.jp/600x600.png" class="img-responsive center-block">
+          <!-- <h2 style="font-size: 12px;">Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p> -->
+        </div>
+      </a>
+      <a href="#">
+        <div class="col-md-2">
+          <img src="https://placehold.jp/600x600.png" class="img-responsive center-block">
+          <!-- <h2 style="font-size: 12px;">Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p> -->
+        </div>
+      </a>
+      <a href="#">
+        <div class="col-md-2">
+          <img src="https://placehold.jp/600x600.png" class="img-responsive center-block">
+          <!-- <h2 style="font-size: 12px;">Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p> -->
+        </div>
+      </a>
+      <a href="#">
+        <div class="col-md-2">
+          <img src="https://placehold.jp/600x600.png" class="img-responsive center-block">
+          <!-- <h2 style="font-size: 12px;">Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p> -->
+        </div>
+      </a>
+      <a href="#">
+        <div class="col-md-2">
+          <img src="https://placehold.jp/600x600.png" class="img-responsive center-block">
+          <!-- <h2 style="font-size: 12px;">Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p> -->
+        </div>
+      </a>
+    </div>
   </div>
   <!-- main goes here goal-->
 
